# WebOverlay

./: IDGenerator.cs  Program.cs  README.md  WebOverlay.sln  WebOverlayForm.Designer.cs  WebOverlayForm.cs
Cpp/: .gitignore  CMakeLists.txt  vs-chromium-project.txt
Cpp/WebOverlay/: Logger.cpp  Logger.hpp  StringUtils.cpp  StringUtils.hpp  main.cpp
Cpp/WebOverlay/Concurrency/: Task.cpp  Task.hpp  TaskResult.hpp  Thread.cpp  Thread.hpp  ThreadSystem.cpp  ThreadSystem.hpp
Cpp/WebOverlay/Dp/: Format.hpp  Json.cpp  Json.hpp  Node.cpp  Node.hpp  Result.cpp  Result.hpp  Serializer.cpp  Serializer.hpp  StringUtils.cpp  StringUtils.hpp  Xml.cpp  Xml.hpp
Cpp/WebOverlay/Network/: IDGenerator.cpp  IDGenerator.hpp  Server.cpp  Server.hpp  User.cpp  User.hpp
Html/: AttributeValidationRule.cs  Base.cs  BaseElement.cs  Body.cs  Div.cs  Document.cs  Element.cs  Head.cs  IAppendable.cs  IBaseElementListener.cs  LineBreak.cs  Link.cs  Meta.cs  Script.cs  Tag.cs  Title.cs  ValidationList.cs
Http/: ABufferReader.cs  ABufferReaderWriter.cs  Client.cs  CodeDrivenHtmlResource.cs  FileResource.cs  FileSystem.cs  HTTP.cs  HeaderFields.cs  Protocol.cs  Request.cs  RequestBufferReader.cs  Resource.cs  Response.cs  Server.cs  WebSocketBufferReader.cs
Http/WebSocket/: Frame.cs  Protocol.cs
Js/: test.html  woframework.js
Js/js/: test.js  woframework.js
Resources/: Index.cs  Overlay.cs  OverlayHtmlElementListener.cs  Test.cs  TestCodeDrivenHTMLPage.cs
